--- a/AcademyManager/AcademyManager/appsettings.json
+++ b/AcademyManager/AcademyManager/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver,1433;Database=academy_manager;User Id=sa;Password=Dapr1234!;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost,1433;Database=academy_manager;User Id=sa;Password=Dapr1234!;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
